components/syntactic_analysis/src/main/java/com/caseystella/parser/DateParser.java
// Generated from com/caseystella/parser/Date.g4 by ANTLR 4.3
package com.caseystella.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CALSEP=1, SUN=2, MON=3, TUE=4, WED=5, THU=6, FRI=7, JAN=8, FEB=9, MAR=10, 
		APR=11, MAY=12, JUN=13, JUL=14, AUG=15, SEP=16, OCT=17, NOV=18, DEC=19, 
		PUNCT=20, PERIOD=21, WS=22, DIGIT=23, REST=24;
	public static final String[] tokenNames = {
		"<INVALID>", "CALSEP", "SUN", "MON", "TUE", "WED", "THU", "FRI", "JAN", 
		"FEB", "MAR", "APR", "MAY", "JUN", "JUL", "AUG", "SEP", "OCT", "NOV", 
		"DEC", "','", "'.'", "WS", "DIGIT", "REST"
	};
	public static final int
		RULE_date = 0, RULE_month = 1, RULE_month_text = 2, RULE_month_digit = 3, 
		RULE_year = 4, RULE_day = 5, RULE_separator = 6, RULE_day_of_week = 7;
	public static final String[] ruleNames = {
		"date", "month", "month_text", "month_digit", "year", "day", "separator", 
		"day_of_week"
	};

	@Override
	public String getGrammarFileName() { return "Date.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DateContext extends ParserRuleContext {
		public Month_digitContext month_digit() {
			return getRuleContext(Month_digitContext.class,0);
		}
		public List<SeparatorContext> separator() {
			return getRuleContexts(SeparatorContext.class);
		}
		public YearContext year() {
			return getRuleContext(YearContext.class,0);
		}
		public SeparatorContext separator(int i) {
			return getRuleContext(SeparatorContext.class,i);
		}
		public TerminalNode EOF() { return getToken(DateParser.EOF, 0); }
		public TerminalNode WS() { return getToken(DateParser.WS, 0); }
		public MonthContext month() {
			return getRuleContext(MonthContext.class,0);
		}
		public Day_of_weekContext day_of_week() {
			return getRuleContext(Day_of_weekContext.class,0);
		}
		public Month_textContext month_text() {
			return getRuleContext(Month_textContext.class,0);
		}
		public DayContext day() {
			return getRuleContext(DayContext.class,0);
		}
		public DateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).enterDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).exitDate(this);
		}
	}

	public final DateContext date() throws RecognitionException {
		DateContext _localctx = new DateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_date);
		int _la;
		try {
			int _alt;
			setState(119);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(17);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUN) | (1L << MON) | (1L << TUE) | (1L << WED) | (1L << THU) | (1L << FRI))) != 0)) {
					{
					setState(16); day_of_week();
					}
				}

				setState(20);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(19); match(WS);
					}
				}

				setState(22); day();
				setState(23); separator();
				setState(24); month();
				setState(25); separator();
				setState(26); year();
				setState(30);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(27);
						matchWildcard();
						}
						} 
					}
					setState(32);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(33); match(EOF);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(36);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUN) | (1L << MON) | (1L << TUE) | (1L << WED) | (1L << THU) | (1L << FRI))) != 0)) {
					{
					setState(35); day_of_week();
					}
				}

				setState(39);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(38); match(WS);
					}
				}

				setState(41); year();
				setState(42); separator();
				setState(43); month();
				setState(44); separator();
				setState(45); day();
				setState(49);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(46);
						matchWildcard();
						}
						} 
					}
					setState(51);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				setState(52); match(EOF);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(55);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUN) | (1L << MON) | (1L << TUE) | (1L << WED) | (1L << THU) | (1L << FRI))) != 0)) {
					{
					setState(54); day_of_week();
					}
				}

				setState(58);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(57); match(WS);
					}
				}

				setState(60); month_digit();
				setState(61); separator();
				setState(62); day();
				setState(63); separator();
				setState(64); year();
				setState(68);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(65);
						matchWildcard();
						}
						} 
					}
					setState(70);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(71); match(EOF);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUN) | (1L << MON) | (1L << TUE) | (1L << WED) | (1L << THU) | (1L << FRI))) != 0)) {
					{
					setState(73); day_of_week();
					}
				}

				setState(77);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(76); match(WS);
					}
				}

				setState(79); month_text();
				setState(81);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CALSEP) | (1L << PUNCT) | (1L << PERIOD) | (1L << WS))) != 0)) {
					{
					setState(80); separator();
					}
				}

				setState(83); day();
				setState(85);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(84); separator();
					}
					break;
				}
				setState(87); separator();
				setState(88); year();
				setState(92);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(89);
						matchWildcard();
						}
						} 
					}
					setState(94);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
				}
				setState(95); match(EOF);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUN) | (1L << MON) | (1L << TUE) | (1L << WED) | (1L << THU) | (1L << FRI))) != 0)) {
					{
					setState(97); day_of_week();
					}
				}

				setState(101);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(100); match(WS);
					}
				}

				setState(103); day();
				setState(104); separator();
				setState(105); month_text();
				setState(107);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(106); separator();
					}
					break;
				}
				setState(109); separator();
				setState(110); year();
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(111);
						matchWildcard();
						}
						} 
					}
					setState(116);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				}
				setState(117); match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MonthContext extends ParserRuleContext {
		public Month_digitContext month_digit() {
			return getRuleContext(Month_digitContext.class,0);
		}
		public Month_textContext month_text() {
			return getRuleContext(Month_textContext.class,0);
		}
		public MonthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_month; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).enterMonth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).exitMonth(this);
		}
	}

	public final MonthContext month() throws RecognitionException {
		MonthContext _localctx = new MonthContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_month);
		try {
			setState(123);
			switch (_input.LA(1)) {
			case JAN:
			case FEB:
			case MAR:
			case APR:
			case MAY:
			case JUN:
			case JUL:
			case AUG:
			case SEP:
			case OCT:
			case NOV:
			case DEC:
				enterOuterAlt(_localctx, 1);
				{
				setState(121); month_text();
				}
				break;
			case DIGIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(122); month_digit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Month_textContext extends ParserRuleContext {
		public TerminalNode APR() { return getToken(DateParser.APR, 0); }
		public TerminalNode MAR() { return getToken(DateParser.MAR, 0); }
		public TerminalNode SEP() { return getToken(DateParser.SEP, 0); }
		public TerminalNode JUN() { return getToken(DateParser.JUN, 0); }
		public TerminalNode JAN() { return getToken(DateParser.JAN, 0); }
		public TerminalNode MAY() { return getToken(DateParser.MAY, 0); }
		public TerminalNode FEB() { return getToken(DateParser.FEB, 0); }
		public TerminalNode PUNCT() { return getToken(DateParser.PUNCT, 0); }
		public TerminalNode NOV() { return getToken(DateParser.NOV, 0); }
		public TerminalNode DEC() { return getToken(DateParser.DEC, 0); }
		public TerminalNode AUG() { return getToken(DateParser.AUG, 0); }
		public TerminalNode WS() { return getToken(DateParser.WS, 0); }
		public TerminalNode JUL() { return getToken(DateParser.JUL, 0); }
		public TerminalNode OCT() { return getToken(DateParser.OCT, 0); }
		public Month_textContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_month_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).enterMonth_text(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).exitMonth_text(this);
		}
	}

	public final Month_textContext month_text() throws RecognitionException {
		Month_textContext _localctx = new Month_textContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_month_text);
		try {
			setState(209);
			switch (_input.LA(1)) {
			case JAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(125); match(JAN);
				setState(127);
				switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
				case 1:
					{
					setState(126); match(WS);
					}
					break;
				}
				setState(130);
				switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
				case 1:
					{
					setState(129); match(PUNCT);
					}
					break;
				}
				}
				break;
			case FEB:
				enterOuterAlt(_localctx, 2);
				{
				setState(132); match(FEB);
				setState(134);
				switch ( getInterpreter().adaptivePredict(_input,22,_ctx) ) {
				case 1:
					{
					setState(133); match(WS);
					}
					break;
				}
				setState(137);
				switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
				case 1:
					{
					setState(136); match(PUNCT);
					}
					break;
				}
				}
				break;
			case MAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(139); match(MAR);
				setState(141);
				switch ( getInterpreter().adaptivePredict(_input,24,_ctx) ) {
				case 1:
					{
					setState(140); match(WS);
					}
					break;
				}
				setState(144);
				switch ( getInterpreter().adaptivePredict(_input,25,_ctx) ) {
				case 1:
					{
					setState(143); match(PUNCT);
					}
					break;
				}
				}
				break;
			case APR:
				enterOuterAlt(_localctx, 4);
				{
				setState(146); match(APR);
				setState(148);
				switch ( getInterpreter().adaptivePredict(_input,26,_ctx) ) {
				case 1:
					{
					setState(147); match(WS);
					}
					break;
				}
				setState(151);
				switch ( getInterpreter().adaptivePredict(_input,27,_ctx) ) {
				case 1:
					{
					setState(150); match(PUNCT);
					}
					break;
				}
				}
				break;
			case MAY:
				enterOuterAlt(_localctx, 5);
				{
				setState(153); match(MAY);
				setState(155);
				switch ( getInterpreter().adaptivePredict(_input,28,_ctx) ) {
				case 1:
					{
					setState(154); match(WS);
					}
					break;
				}
				setState(158);
				switch ( getInterpreter().adaptivePredict(_input,29,_ctx) ) {
				case 1:
					{
					setState(157); match(PUNCT);
					}
					break;
				}
				}
				break;
			case JUN:
				enterOuterAlt(_localctx, 6);
				{
				setState(160); match(JUN);
				setState(162);
				switch ( getInterpreter().adaptivePredict(_input,30,_ctx) ) {
				case 1:
					{
					setState(161); match(WS);
					}
					break;
				}
				setState(165);
				switch ( getInterpreter().adaptivePredict(_input,31,_ctx) ) {
				case 1:
					{
					setState(164); match(PUNCT);
					}
					break;
				}
				}
				break;
			case JUL:
				enterOuterAlt(_localctx, 7);
				{
				setState(167); match(JUL);
				setState(169);
				switch ( getInterpreter().adaptivePredict(_input,32,_ctx) ) {
				case 1:
					{
					setState(168); match(WS);
					}
					break;
				}
				setState(172);
				switch ( getInterpreter().adaptivePredict(_input,33,_ctx) ) {
				case 1:
					{
					setState(171); match(PUNCT);
					}
					break;
				}
				}
				break;
			case AUG:
				enterOuterAlt(_localctx, 8);
				{
				setState(174); match(AUG);
				setState(176);
				switch ( getInterpreter().adaptivePredict(_input,34,_ctx) ) {
				case 1:
					{
					setState(175); match(WS);
					}
					break;
				}
				setState(179);
				switch ( getInterpreter().adaptivePredict(_input,35,_ctx) ) {
				case 1:
					{
					setState(178); match(PUNCT);
					}
					break;
				}
				}
				break;
			case SEP:
				enterOuterAlt(_localctx, 9);
				{
				setState(181); match(SEP);
				setState(183);
				switch ( getInterpreter().adaptivePredict(_input,36,_ctx) ) {
				case 1:
					{
					setState(182); match(WS);
					}
					break;
				}
				setState(186);
				switch ( getInterpreter().adaptivePredict(_input,37,_ctx) ) {
				case 1:
					{
					setState(185); match(PUNCT);
					}
					break;
				}
				}
				break;
			case OCT:
				enterOuterAlt(_localctx, 10);
				{
				setState(188); match(OCT);
				setState(190);
				switch ( getInterpreter().adaptivePredict(_input,38,_ctx) ) {
				case 1:
					{
					setState(189); match(WS);
					}
					break;
				}
				setState(193);
				switch ( getInterpreter().adaptivePredict(_input,39,_ctx) ) {
				case 1:
					{
					setState(192); match(PUNCT);
					}
					break;
				}
				}
				break;
			case NOV:
				enterOuterAlt(_localctx, 11);
				{
				setState(195); match(NOV);
				setState(197);
				switch ( getInterpreter().adaptivePredict(_input,40,_ctx) ) {
				case 1:
					{
					setState(196); match(WS);
					}
					break;
				}
				setState(200);
				switch ( getInterpreter().adaptivePredict(_input,41,_ctx) ) {
				case 1:
					{
					setState(199); match(PUNCT);
					}
					break;
				}
				}
				break;
			case DEC:
				enterOuterAlt(_localctx, 12);
				{
				setState(202); match(DEC);
				setState(204);
				switch ( getInterpreter().adaptivePredict(_input,42,_ctx) ) {
				case 1:
					{
					setState(203); match(WS);
					}
					break;
				}
				setState(207);
				switch ( getInterpreter().adaptivePredict(_input,43,_ctx) ) {
				case 1:
					{
					setState(206); match(PUNCT);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Month_digitContext extends ParserRuleContext {
		public TerminalNode DIGIT(int i) {
			return getToken(DateParser.DIGIT, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(DateParser.DIGIT); }
		public Month_digitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_month_digit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).enterMonth_digit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).exitMonth_digit(this);
		}
	}

	public final Month_digitContext month_digit() throws RecognitionException {
		Month_digitContext _localctx = new Month_digitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_month_digit);
		try {
			setState(214);
			switch ( getInterpreter().adaptivePredict(_input,45,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(211); match(DIGIT);
				setState(212); match(DIGIT);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(213); match(DIGIT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class YearContext extends ParserRuleContext {
		public TerminalNode DIGIT(int i) {
			return getToken(DateParser.DIGIT, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(DateParser.DIGIT); }
		public YearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_year; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).enterYear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).exitYear(this);
		}
	}

	public final YearContext year() throws RecognitionException {
		YearContext _localctx = new YearContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_year);
		try {
			setState(222);
			switch ( getInterpreter().adaptivePredict(_input,46,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(216); match(DIGIT);
				setState(217); match(DIGIT);
				setState(218); match(DIGIT);
				setState(219); match(DIGIT);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(220); match(DIGIT);
				setState(221); match(DIGIT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DayContext extends ParserRuleContext {
		public TerminalNode DIGIT(int i) {
			return getToken(DateParser.DIGIT, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(DateParser.DIGIT); }
		public DayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_day; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).enterDay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).exitDay(this);
		}
	}

	public final DayContext day() throws RecognitionException {
		DayContext _localctx = new DayContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_day);
		try {
			setState(227);
			switch ( getInterpreter().adaptivePredict(_input,47,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(224); match(DIGIT);
				setState(225); match(DIGIT);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(226); match(DIGIT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeparatorContext extends ParserRuleContext {
		public TerminalNode PUNCT() { return getToken(DateParser.PUNCT, 0); }
		public TerminalNode WS() { return getToken(DateParser.WS, 0); }
		public TerminalNode CALSEP() { return getToken(DateParser.CALSEP, 0); }
		public TerminalNode PERIOD() { return getToken(DateParser.PERIOD, 0); }
		public SeparatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_separator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).enterSeparator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).exitSeparator(this);
		}
	}

	public final SeparatorContext separator() throws RecognitionException {
		SeparatorContext _localctx = new SeparatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_separator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(229);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CALSEP) | (1L << PUNCT) | (1L << PERIOD) | (1L << WS))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Day_of_weekContext extends ParserRuleContext {
		public TerminalNode PUNCT() { return getToken(DateParser.PUNCT, 0); }
		public TerminalNode SUN() { return getToken(DateParser.SUN, 0); }
		public TerminalNode WS() { return getToken(DateParser.WS, 0); }
		public TerminalNode MON() { return getToken(DateParser.MON, 0); }
		public TerminalNode THU() { return getToken(DateParser.THU, 0); }
		public TerminalNode WED() { return getToken(DateParser.WED, 0); }
		public TerminalNode TUE() { return getToken(DateParser.TUE, 0); }
		public TerminalNode FRI() { return getToken(DateParser.FRI, 0); }
		public Day_of_weekContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_day_of_week; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).enterDay_of_week(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateListener ) ((DateListener)listener).exitDay_of_week(this);
		}
	}

	public final Day_of_weekContext day_of_week() throws RecognitionException {
		Day_of_weekContext _localctx = new Day_of_weekContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_day_of_week);
		int _la;
		try {
			setState(273);
			switch (_input.LA(1)) {
			case SUN:
				enterOuterAlt(_localctx, 1);
				{
				setState(231); match(SUN);
				setState(233);
				switch ( getInterpreter().adaptivePredict(_input,48,_ctx) ) {
				case 1:
					{
					setState(232); match(WS);
					}
					break;
				}
				setState(236);
				_la = _input.LA(1);
				if (_la==PUNCT) {
					{
					setState(235); match(PUNCT);
					}
				}

				}
				break;
			case MON:
				enterOuterAlt(_localctx, 2);
				{
				setState(238); match(MON);
				setState(240);
				switch ( getInterpreter().adaptivePredict(_input,50,_ctx) ) {
				case 1:
					{
					setState(239); match(WS);
					}
					break;
				}
				setState(243);
				_la = _input.LA(1);
				if (_la==PUNCT) {
					{
					setState(242); match(PUNCT);
					}
				}

				}
				break;
			case TUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(245); match(TUE);
				setState(247);
				switch ( getInterpreter().adaptivePredict(_input,52,_ctx) ) {
				case 1:
					{
					setState(246); match(WS);
					}
					break;
				}
				setState(250);
				_la = _input.LA(1);
				if (_la==PUNCT) {
					{
					setState(249); match(PUNCT);
					}
				}

				}
				break;
			case WED:
				enterOuterAlt(_localctx, 4);
				{
				setState(252); match(WED);
				setState(254);
				switch ( getInterpreter().adaptivePredict(_input,54,_ctx) ) {
				case 1:
					{
					setState(253); match(WS);
					}
					break;
				}
				setState(257);
				_la = _input.LA(1);
				if (_la==PUNCT) {
					{
					setState(256); match(PUNCT);
					}
				}

				}
				break;
			case THU:
				enterOuterAlt(_localctx, 5);
				{
				setState(259); match(THU);
				setState(261);
				switch ( getInterpreter().adaptivePredict(_input,56,_ctx) ) {
				case 1:
					{
					setState(260); match(WS);
					}
					break;
				}
				setState(264);
				_la = _input.LA(1);
				if (_la==PUNCT) {
					{
					setState(263); match(PUNCT);
					}
				}

				}
				break;
			case FRI:
				enterOuterAlt(_localctx, 6);
				{
				setState(266); match(FRI);
				setState(268);
				switch ( getInterpreter().adaptivePredict(_input,58,_ctx) ) {
				case 1:
					{
					setState(267); match(WS);
					}
					break;
				}
				setState(271);
				_la = _input.LA(1);
				if (_la==PUNCT) {
					{
					setState(270); match(PUNCT);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}